fix: correct alignment of the footer text

--- a/src/styles/components/Footer.module.css
+++ b/src/styles/components/Footer.module.css
@@ -1,45 +1,35 @@
 footer {
-    width: 100%;
-    height: 40vh;
-    background-color: #333;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-footer svg {
-    color: rgba(209, 216, 224, .5);
-}
-
-footer svg:not(:first-of-type):not(:last-of-type) {
-    margin: 0 1.5rem;
+  width: 100%;
+  height: 40vh;
+  background-color: #333;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .subContainer {
-    display: flex;
-    flex-flow: row wrap;
-    width: 200px;
-    justify-content: center;
+  display: flex;
+  flex-flow: row wrap;
+  width: 200px;
+  justify-content: center;
 }
 
 .imprint {
-    color: white;
-    font-size: 1.5rem;
-}
-
-.imprint:hover {
-    cursor: pointer;
+  color: white;
+  font-size: 1.5rem;
 }
 
 .rights {
-    color: white;
-    font-size: 1.5rem;
-    word-spacing: 2px;
+  color: white;
+  font-size: 1.5rem;
+  word-spacing: 2px;
+  text-align: center;
+  line-height: 3rem;
 }
 
-@media all and (max-width: 425px) {
-    .rights {
-        text-align: center;
-    }
+@media (hover: hover) and (pointer: fine) {
+  .imprint:hover {
+    cursor: pointer;
+  }
 }
